services：Daemon.jstack 子进程流不收尾
问题：
- 输入流不关、stderr 无人消费可致缓冲区填满阻塞、destroy 后不等待。

修复：
- ProcessBuilder redirectErrorStream(true) + try-with-resources + waitFor(30s) 超时 destroyForcibly。

验证：
- 回归 :ZezeJavaTest:test（@Fast 全量）通过；编译门禁通过。